bulk edit endpoint added